# PySide6

./: .gitignore  03.能真正登录的登录框.py  04.一个真正的四则运算的计算器.py  05.进制转化.py  pyproject.toml  requirements.txt  三大基础控件之按钮控件.py  三大基础控件之文本输入框.py  三大基础控件之标签控件.py  使用静态编译的软件方法1.py  使用静态编译的软件方法2.py  信号与槽.py  基础框架.py  常用控件之QRadioButton.py  常用控件之QcheckBox.py  常用控件之QcomboBox.py  登录框.py  登录框.ui  计算器.py  计算器.ui  进制转化.py  进制转化.ui
05.进制转换/: demo.py  main.py  进制转化.py
